--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fontfaceobserver": "2.0.5",
     "immutable": "3.8.1",
     "intl": "1.2.5",
@@ -195,6 +196,7 @@
     "lodash": "4.16.4",
     "material-ui": "^0.16.5",
     "minimist": "1.2.0",
+    "normalize.css": "^5.0.0",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-helmet": "3.1.0",
@@ -204,6 +206,7 @@
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.3.3",
     "redux": "3.6.0",
+    "redux-form": "^6.3.2",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
     "reselect": "2.5.4",
