--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     ]
   },
   "dependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-polyfill": "6.16.0",
     "chalk": "1.1.3",
     "compression": "1.6.2",
@@ -197,6 +198,11 @@
     "material-ui": "^0.16.5",
     "minimist": "1.2.0",
     "normalize.css": "^5.0.0",
+    "postcss": "^5.2.8",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-focus": "^1.0.0",
+    "postcss-loader": "^1.2.1",
+    "postcss-reporter": "^3.0.0",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-helmet": "3.1.0",
