--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "ip": "1.1.3",
     "lodash": "4.16.4",
     "material-ui": "^0.16.5",
+    "moment":"2.17.1",
     "minimist": "1.2.0",
     "normalize.css": "^5.0.0",
     "react": "15.3.2",
