--- a/package.json
+++ b/package.json
@@ -195,16 +195,14 @@
     "ip": "1.1.3",
     "lodash": "4.16.4",
     "material-ui": "^0.16.5",
-<<<<<<< HEAD
-    "moment":"2.17.1",
-=======
     "material-ui-chip-input": "^0.12.1",
->>>>>>> master
+    "moment":"2.17.1",
     "minimist": "1.2.0",
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.9.2",
     "react-helmet": "^4.0.0",
     "react-intl": "2.1.5",
     "react-redux": "^5.0.2",
