--- a/package.json
+++ b/package.json
@@ -196,8 +196,8 @@
     "lodash": "4.16.4",
     "material-ui": "^0.16.5",
     "material-ui-chip-input": "^0.12.1",
-    "moment":"2.17.1",
     "minimist": "1.2.0",
+    "moment": "^2.17.1",
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
