--- a/package.json
+++ b/package.json
@@ -207,7 +207,7 @@
     "react-intl": "2.1.5",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.7",
+    "react-router-redux": "4.0.6",
     "react-router-scroll": "0.3.3",
     "react-tap-event-plugin": "2.0.0",
     "redux": "3.6.0",
