--- a/package.json
+++ b/package.json
@@ -186,9 +186,11 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
+    "eslint-plugin-import": "^2.0.1",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fontfaceobserver": "2.0.5",
+    "fs": "0.0.1-security",
     "immutable": "3.8.1",
     "intl": "1.2.5",
     "invariant": "2.2.1",
@@ -198,10 +200,12 @@
     "material-ui-chip-input": "^0.12.1",
     "minimist": "1.2.0",
     "moment": "^2.17.1",
+    "net": "^1.0.2",
     "normalize.css": "^5.0.0",
     "papaparse": "^4.1.4",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
+    "react-currency-input": "^1.3.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.2",
     "react-ga": "^2.2.0",
@@ -219,6 +223,7 @@
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
     "styled-components": "^1.4.0",
+    "tls": "0.0.1",
     "underscore": "^1.8.3",
     "warning": "3.0.0",
     "whatwg-fetch": "1.0.0"
