--- a/package.json
+++ b/package.json
@@ -187,7 +187,6 @@
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fontfaceobserver": "2.0.5",
     "immutable": "3.8.1",
     "intl": "1.2.5",
@@ -202,6 +201,7 @@
     "papaparse": "^4.1.4",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
+    "react-currency-input": "^1.3.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.2",
     "react-ga": "^2.2.0",
