--- a/package.json
+++ b/package.json
@@ -199,6 +199,7 @@
     "moment": "^2.17.1",
     "normalize.css": "^5.0.0",
     "papaparse": "^4.1.4",
+    "radium": "^0.19.4",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-currency-input": "^1.3.4",
