--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
+    "emoji-mart": "^1.0.1",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.5",
     "immutable": "3.8.1",
